--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,11 @@ footer {
 
 @media only screen and (max-width: 480px) {
   .column p {
-    font-size: 0.76em;
+    font-size: 0.916em;
+  }
+
+  .activitylog p {
+    font-size: 0.75em;
   }
 
   .container {
