--- a/styles.css
+++ b/styles.css
@@ -173,9 +173,13 @@ footer {
     font-size: 0.83em;
   }
 
-  .activitylog p {
+  .activitylog {
     font-size: 0.75em;
   }
+
+  .bulletin {
+    font-size: 0.75em;
+}
 
   .container {
     flex-direction: column;
