--- a/styles.css
+++ b/styles.css
@@ -159,12 +159,22 @@ footer {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 0.625em;
+  padding: 0em 0.4em 0.3em 0.4em;
 }
 
 @media only screen and (max-width: 925px) {
   .container .column:nth-child(3) {
     margin-left: 0;
+  }
+}
+
+@media only screen and (max-width: 621px) {
+  body {
+    min-height: auto; /* or use min-height: unset; */
+  }
+
+  footer {
+    position: static;
   }
 }
 
@@ -201,4 +211,5 @@ footer {
     width: calc(100% - 0.25em);
     margin: 0.125em 0;
   }
+
 }
