--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
   font-size: 1em;
 }
 
-/* Styles specific to the homepage */
 .homepage {
   /* background-image: url('images/Docent_site_sample_hello_green.png'); */
   background-position: center center;
@@ -100,13 +99,26 @@ p {
 .bulletin {
   background-color: #ccf1cf;
   color: #3c473d;
-  padding: 0.3em 0.4em;
+  padding: 0.3em 0.6em;
   border-radius: 0.2em;
   display: inline;
   font-size: 0.58em;
   line-height: 2em;
   box-decoration-break: clone;
   -webkit-box-decoration-break: clone;
+}
+
+@keyframes blink {
+  0%   { content: ""; }
+  33%  { content: "."; }
+  66%  { content: ".."; }
+  100% { content: "..."; }
+}
+
+.dots::after {
+  display: inline-block;
+  animation: blink 1s steps(3, end) infinite;
+  content: "";
 }
 
 .fadedtext {
@@ -121,7 +133,7 @@ p {
 
 .column {
   box-sizing: border-box;
-  width: 300px; /* Fixed width of 300px */
+  width: 300px;
   margin: 0.125em;
   padding: 0.375em;
   vertical-align: top;
@@ -137,15 +149,15 @@ p {
 }
 
 p + p.linebreak {
-  margin-top: .6em; /* Adjust the margin-top value as needed */
+  margin-top: .6em;
 }
 
 .article_column {
-  width: 80%; /* Adjust as needed */
-  max-width: 500px; /* Adjust as needed */
-  margin: 0 auto; /* Center the column */
-  padding: 20px; /* Adjust as needed */
-  box-sizing: border-box; /* Ensures padding is included in the total width */
+  width: 80%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .article_column p {
@@ -170,11 +182,21 @@ footer {
 
 @media only screen and (max-width: 621px) {
   body {
-    min-height: auto; /* or use min-height: unset; */
+    min-height: auto;
+  }
+
+  .column:last-child {
+  margin-bottom: 0;
   }
 
   footer {
     position: static;
+  }
+
+    footer p {
+    font-size: 0.75em;
+    width: 100%;
+    text-align: center;
   }
 }
 
