--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ p {
   padding: 0.3em 0.5em;
   border-radius: 0.2em;
   display: inline;
-  font-size: 0.58em;
+  font-size: .66em;
   line-height: 2em;
   box-decoration-break: clone;
   -webkit-box-decoration-break: clone;
